<resources>
    <string name="app_name">AutoAware App</string>
    <string name="title_activity_main">Sensors</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="button1_string"> Configure </string>
    <string name="button2_string">Enable</string>
    <string name="sensor_name_hint">New Sensor</string>
    <string name="remove">Remove</string>
    <string name="action_settings">Settings</string>
    <string name="start_time_hour">00</string>
    <string name="colon">:</string>
    <string name="start_time_minute">00</string>
    <string name="end_time_hour">18</string>
    <string name="end_time_minute">30</string>
    <string name="threshold_tag">Threshold</string>
    <string name="notifications_tag">Notification Options</string>
    <string name="desktop_tag">Desktop</string>
    <string name="text_tag">Text</string>
    <string name="email_tag">Email</string>
    <string name="mobile_tag">App</string>
    <string name="mobile_hint">xxx-xxx-xxxx</string>
    <string name="email_hint">abc@email.com</string>
    <string name="default_string">Default</string>
    <string name="apply_string">Apply</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
