<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:id="@+id/add_activity_settings"
    >

    <TextView
        android:id="@+id/add_settings_name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginTop="12dp"
        android:text="Name"
        android:textSize="22dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/add_set_name_text"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:padding="5dp"
        android:layout_toRightOf="@id/add_settings_name_tag"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:hint="@string/sensor_name_hint"
        android:textSize="15dp"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        />

    <TextView
        android:id="@+id/add_ip_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/add_set_name_text"
        android:text="IP"
        android:textSize="22dp"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/add_set_ip_text"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:padding="5dp"
        android:layout_toRightOf="@id/add_ip_tag"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:hint="IP Address"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        />


    <CheckBox
        android:id="@+id/add_timer_check_box"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_settings_name_tag"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="7dp"
        />

    <TextView
        android:id="@+id/add_checkbox_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_set_name_text"
        android:layout_toRightOf="@id/add_timer_check_box"
        android:layout_marginTop="15dp"
        android:text="Schedule Time"
        android:textSize="22dp"
        android:textColor="#000000"
        />

    //Start time

    <TextView
        android:id="@+id/add_start_time_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_checkbox_tag"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="17dp"
        android:text="Turn on at"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/add_start_time_hour"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_below="@id/add_checkbox_tag"
        android:layout_toRightOf="@id/add_start_time_tag"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="13dp"
        android:hint="00"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        android:gravity="center"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/add_hour_minute_separator_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/add_start_time_hour"
        android:layout_below="@id/add_checkbox_tag"
        android:padding="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="5dp"
        android:text="@string/colon"
        android:textSize="25dp"
        />

    <EditText
        android:id="@+id/add_start_time_minute"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_below="@id/add_checkbox_tag"
        android:layout_toRightOf="@id/add_hour_minute_separator_tag"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:hint="00"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        android:gravity="center"
        android:textSize="20dp"
        />



    //End time

    <TextView
        android:id="@+id/add_end_time_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_start_time_tag"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:text="Turn off at"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/add_end_time_hour"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_below="@id/add_start_time_hour"
        android:layout_toRightOf="@id/add_end_time_tag"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:hint="00"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        android:gravity="center"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/add_end_hour_minute_separator_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/add_end_time_hour"
        android:layout_below="@id/add_hour_minute_separator_tag"
        android:padding="5dp"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="5dp"
        android:text="@string/colon"
        android:textSize="25dp"
        />

    <EditText
        android:id="@+id/add_end_time_minute"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:layout_below="@id/add_start_time_minute"
        android:layout_toRightOf="@id/add_end_hour_minute_separator_tag"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:hint="00"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        android:gravity="center"
        android:textSize="20dp"
        />

    <TextView
        android:id="@+id/add_sensor_type_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_end_time_tag"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="7dp"
        android:text="Sensor type"
        android:textSize="22dp"
        android:textColor="#000000"
        />

    <RadioGroup
        android:id="@+id/add_sensor_type_group"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_sensor_type_tag"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        >

        <RadioButton
            android:id="@+id/add_light_sensor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Light"
            android:textSize="18dp"
            android:textColor="#7d7d7d"
            android:enabled="true"
            />

        <RadioButton
            android:id="@+id/add_sound_sensor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sound"
            android:textSize="18dp"
            android:layout_marginLeft="15dp"
            android:textColor="#7d7d7d"
            />

        <RadioButton
            android:id="@+id/add_video_sensor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Video"
            android:textSize="18dp"
            android:layout_marginLeft="15dp"
            android:textColor="#7d7d7d"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/add_threshold_tag"
        android:padding="5dp"
        android:layout_marginLeft="7dp"
        android:layout_below="@id/add_sensor_type_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threshold_tag"
        android:textSize="22dp"
        android:textColor="#000000"
        />

    <SeekBar
        android:id="@+id/add_set_threshold_bar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/add_threshold_tag"
        android:layout_below="@id/add_sensor_type_group"
        android:layout_marginTop="7dp"
        style="@android:style/Widget.SeekBar"
        />

    <TextView
        android:id="@+id/add_notifications_tag"
        android:padding="5dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/add_threshold_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_tag"
        android:textSize="22dp"
        android:textColor="#000000"
        />

    <CheckBox
        android:layout_below="@id/add_notifications_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_desktop_box"
        android:layout_marginLeft="7dp"
        android:text="@string/desktop_tag"
        android:textSize="18dp"
        android:textColor="#7d7d7d"
        />

    <CheckBox
        android:layout_below="@id/add_notifications_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_text_box"
        android:layout_marginLeft="7dp"
        android:layout_toRightOf="@id/add_desktop_box"
        android:text="@string/text_tag"
        android:textSize="18dp"
        android:textColor="#7d7d7d"
        />

    <CheckBox
        android:layout_toRightOf="@id/add_text_box"
        android:layout_below="@id/add_notifications_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_email_box"
        android:layout_marginLeft="7dp"
        android:text="@string/email_tag"
        android:textSize="18dp"
        android:textColor="#7d7d7d"
        />

    <CheckBox
        android:layout_toRightOf="@id/add_email_box"
        android:layout_below="@id/add_notifications_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_mobile_box"
        android:layout_marginLeft="7dp"
        android:text="@string/mobile_tag"
        android:textSize="18dp"
        android:textColor="#7d7d7d"
        />

    <EditText
        android:id="@+id/add_mobile_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/add_desktop_box"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="22dp"
        android:hint="@string/mobile_hint"
        android:capitalize="characters"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        android:gravity="center"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/add_email_id"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_below="@id/add_email_box"
        android:layout_toRightOf="@id/add_mobile_number"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:hint="@string/email_hint"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        android:gravity="center"
        android:textSize="18dp"
        />

    <Button
        android:id="@+id/add_confirm_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ADD SENSOR"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/add_mobile_number"
        android:layout_marginLeft="7dp"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
