<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/personal_info_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Personal Information"
        android:textSize="25dp"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/name_tag"
        android:layout_below="@id/personal_info_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/tag"
        android:layout_below="@id/personal_info_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/name_tag"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="5dp"
        android:text="@string/colon"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/set_name_text"
        android:layout_below="@id/personal_info_tag"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:padding="5dp"
        android:layout_toRightOf="@id/tag"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:hint="Enter Your Name"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        />


    <TextView
        android:id="@+id/email_id_tag"
        android:layout_below="@id/name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email ID"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:layout_below="@id/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/email_id_tag"
        android:layout_marginTop="25dp"
        android:text="@string/colon"
        android:layout_marginLeft="5dp"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/set_email_text"
        android:layout_below="@id/set_name_text"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:padding="5dp"
        android:layout_toRightOf="@id/tag"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:hint="@string/email_hint"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        />

    <TextView
        android:id="@+id/username_tag"
        android:layout_below="@id/email_id_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:layout_below="@id/email_id_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/username_tag"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="3dp"
        android:text="@string/colon"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/username_text"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_below="@id/set_email_text"
        android:padding="5dp"
        android:layout_toRightOf="@id/tag"
        android:layout_marginTop="14dp"
        android:layout_marginLeft="37dp"
        android:hint="username"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        />

    <TextView
        android:id="@+id/password_tag"
        android:layout_below="@id/username_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:layout_below="@id/username_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/name_tag"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="37dp"
        android:text="@string/colon"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/password_text"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_below="@id/username_text"
        android:padding="5dp"
        android:layout_toRightOf="@id/tag"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:hint="Password"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        />
    <EditText
        android:id="@+id/re_password_text"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_below="@id/password_text"
        android:padding="5dp"
        android:layout_toRightOf="@id/tag"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        android:hint="Re-enter Password"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        />


    <TextView
        android:id="@+id/phone_no_tag"
        android:layout_below="@id/re_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Phone No"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:layout_below="@id/re_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/phone_no_tag"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="3dp"
        android:text="@string/colon"
        android:textSize="20dp"
        />
    <EditText
        android:id="@+id/phone_text"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_below="@id/re_password_text"
        android:padding="5dp"
        android:layout_toRightOf="@id/tag"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="35dp"
        android:hint="xxx-xxx-xxxx"
        android:background="@drawable/edittext_bg"
        android:textColorHint="#7d7d7d"
        />


    <TextView
        android:id="@+id/notifications_tag"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/phone_no_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_tag"
        android:textSize="25dp"
        android:textColor="#000000"
        />
    <CheckBox
        android:layout_below="@id/notifications_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/desktop_box"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/desktop_tag"
        android:textSize="18dp"
        android:textColor="#7d7d7d"
        />
    <CheckBox
        android:layout_below="@id/notifications_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_box"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/desktop_box"
        android:text="@string/text_tag"
        android:textSize="18dp"
        android:textColor="#7d7d7d"
        />
    <CheckBox
        android:layout_toRightOf="@id/text_box"
        android:layout_below="@id/notifications_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_box"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/email_tag"
        android:textSize="18dp"
        android:textColor="#7d7d7d"
        />
    <CheckBox
        android:layout_toRightOf="@id/email_box"
        android:layout_below="@id/notifications_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_box"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="@string/mobile_tag"
        android:textSize="18dp"
        android:textColor="#7d7d7d"
        android:checked="false" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_box"
        android:layout_centerHorizontal="true"
        android:text="Sign Up"
        android:textColor="#000000"
        android:textSize="18dp"
        android:layout_marginTop="5dp"
        />

</RelativeLayout>