<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="5dp"
    android:background="#ffffff">

    <RelativeLayout android:id="@+id/sensor_info_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <TextView
            android:id="@+id/sensor_name"
            android:padding="5dp"
            android:textSize="22dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/sensor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            />

        <TextView
            android:id="@+id/sensor_ip"
            android:textSize="18dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/sensor_name"
            android:layout_marginLeft="5dp"
            android:text="IP address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#7d7d7d"
            />


        <ImageView
            android:id="@+id/sensor_type_image"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:paddingBottom="5dp"
            android:layout_toRightOf="@id/sensor_ip"
            android:src="@mipmap/ic_bulb"
            android:clickable="false"
            />

        <ImageButton
            android:id="@+id/rec_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/sensor_type_image"
            android:src="@mipmap/ic_rec"
            android:background="#ffffff"
            android:clickable="true"
            />

        <SeekBar
            android:id="@+id/current_val_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sensor_name"
            android:layout_marginTop="15dp"
            style="@android:style/Widget.SeekBar"
            />

        <Button
            android:id="@+id/button1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/button1_string"
            android:textSize="16dp"
            android:padding="5dp"
            android:layout_below="@id/current_val_bar"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="75dp"
            android:clickable="true"
            />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2_string"
            android:textSize="16dp"
            android:padding="5dp"
            android:layout_below="@id/current_val_bar"
            android:layout_toRightOf="@id/button1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            />

        </RelativeLayout>
 </RelativeLayout>